--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -6,7 +6,7 @@
         onsubmit="window.open('https://feedburner.google.com/fb/a/mailverify?uri=nithinbekal', 'popupwindow', 'scrollbars=yes,width=550,height=520');return true">
     <input type="text" class='subscribe-email' name="email"
             tabindex="0" placeholder="Enter your email" />
-    <input type="hidden" value="nithinbekal" name="uri"/>
+    <input type="hidden" value="shantharamshenoy" name="uri"/>
     <input type="hidden" name="loc" value="en_US"/>
     <input type="submit" value="Subscribe"
             tabindex="1" class="subscribe-submit" />
