--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,16 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name=viewport content="width=device-width, initial-scale=1">
-    <meta name="author" content="Nithin Bekal">
+    <meta name="author" content="Shantharam Shenoy">
     <meta name="description" content="{{ site.description }}">
-    <meta property="og:image" content="https://s3.amazonaws.com/nithinbekal.com/word-cloud.png" />
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@nithinbekal">
-    <meta name="twitter:creator" content="@nithinbekal">
+    <meta name="twitter:site" content="@shantharamksd">
+    <meta name="twitter:creator" content="@shantharamksd">
     <meta name="twitter:title" content="{{ page.title }}">
     <meta name="twitter:description" content="{{ site.description }}">
-    <meta name="twitter:image" content="https://s3.amazonaws.com/nithinbekal.com/word-cloud.png">
 
     <title>{{ page.title }}</title>
 
@@ -29,8 +27,8 @@
         <span class='links align-right'>
           <a class='top-about-link' href='/'>Posts</a>
           <a class='top-about-link' href='/about/'>About</a>
-          <a class='top-about-link sm-hide' href='/notes/'>Notes</a>
-          <a class='top-about-link sm-hide' href='/slides/'>Slides</a>
+          <!--a class='top-about-link sm-hide' href='/notes/'>Notes</a>
+          <a class='top-about-link sm-hide' href='/slides/'>Slides</a-->
         </span>
       </div>
 
@@ -41,7 +39,7 @@
       <div class='footer'>
         Powered by <a href='http://jekyllrb.com'>Jekyll</a>.
         Get this theme
-        <a href="https://github.com/nithinbekal/nithinbekal.github.io/">here</a>.
+        <a href="https://github.com/shantharamshenoy/shantharamshenoy.github.io/">here</a>.
       </div>
     </div> <!-- /container -->
     {% include analytics.html %}
