--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="/css/main.css">
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.url }}/feed.xml">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="author" href="https://plus.google.com/+NithinBekal">
+    <link rel="author" href="https://plus.google.com/+ShantharamShenoy">
   </head>
   <body>
     <div class='container'>
